--- a/example/install.ipynb
+++ b/example/install.ipynb
@@ -15,17 +15,11 @@
     "\n",
     "- pandoc\n",
     "\n",
-    "`\n",
-    "sudo apt-get install pandoc\n",
-    "`\n",
+    "`sudo apt-get install pandoc`\n",
     "\n",
     "## Installation with pip\n",
     "\n",
-    "`sh\n",
-    "git clone https://github.com/loicdtx/python-webbook.git\n",
-    "cd python-webbook\n",
-    "pip install -e .\n",
-    "`\n"
+    "`pip install git+https://github.com/loicdtx/python-webbook.git`\n"
    ]
   }
  ],
