--- a/example/use.ipynb
+++ b/example/use.ipynb
@@ -24,13 +24,11 @@
     "`\n",
     "{\n",
     "\"title\": \"Title of the notebook\", \n",
-    "\"chapters\": {\n",
-    "    \"file_names\": [\n",
+    "\"files\": [\n",
     "        \"firstChapter.ipynb\",\n",
     "        \"secondChapter.ipynb\",\n",
     "        \"thirdChapter.ipynb\"\n",
-    "    ]\n",
-    "},\n",
+    "    ],\n",
     "\"assets\": \"img\"}\n",
     "`\n",
     "\n",
@@ -47,12 +45,7 @@
     "\n",
     "## Deploy on gh-pages\n",
     "\n",
-    "Assuming you're working in a git directory, on master branch, something like that should do:\n",
-    "\n",
-    "`\n",
-    "git checkout --orphan gh-pages\n",
-    "git checkout master -- _site\n",
-    "`\n"
+    "I'm still looking into that. [This bash scrip](https://github.com/X1011/git-directory-deploy) sounds like a good option.\n"
    ]
   }
  ],
