Updated example webBook

--- a/example/install.ipynb
+++ b/example/install.ipynb
@@ -17,6 +17,10 @@
     "\n",
     "`sudo apt-get install pandoc`\n",
     "\n",
+    "- development version of `nbconvert`\n",
+    "\n",
+    "`pip install git+https://github.com/jupyter/nbconvert.git`\n",
+    "\n",
     "## Installation with pip\n",
     "\n",
     "`pip install git+https://github.com/loicdtx/python-webbook.git`\n"
