--- a/example/use.ipynb
+++ b/example/use.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "## Deploy on gh-pages\n",
     "\n",
-    "I'm still looking into that. [This bash scrip](https://github.com/X1011/git-directory-deploy) sounds like a good option.\n"
+    "I'm still working on making that flowless. [This bash scrip](https://github.com/X1011/git-directory-deploy) sounds like a good option.\n"
    ]
   }
  ],
