--- a/example/examples.ipynb
+++ b/example/examples.ipynb
@@ -29,11 +29,24 @@
     "\n",
     "### Tables\n",
     "\n",
-    "|Name|Specie|\n",
-    "|:---|-----:|\n",
-    "|Pluto|Dog|\n",
-    "|Donald|Duck|\n",
-    "|Tintin|Human|\n",
+    "|    | Sepal.Length| Sepal.Width| Petal.Length| Petal.Width|Species    |\n",
+    "|:---|------------:|-----------:|------------:|-----------:|:----------|\n",
+    "|130 |          7.2|         3.0|          5.8|         1.6|virginica  |\n",
+    "|27  |          5.0|         3.4|          1.6|         0.4|setosa     |\n",
+    "|63  |          6.0|         2.2|          4.0|         1.0|versicolor |\n",
+    "|84  |          6.0|         2.7|          5.1|         1.6|versicolor |\n",
+    "|114 |          5.7|         2.5|          5.0|         2.0|virginica  |\n",
+    "|40  |          5.1|         3.4|          1.5|         0.2|setosa     |\n",
+    "|50  |          5.0|         3.3|          1.4|         0.2|setosa     |\n",
+    "|45  |          5.1|         3.8|          1.9|         0.4|setosa     |\n",
+    "|28  |          5.2|         3.5|          1.5|         0.2|setosa     |\n",
+    "|146 |          6.7|         3.0|          5.2|         2.3|virginica  |\n",
+    "|48  |          4.6|         3.2|          1.4|         0.2|setosa     |\n",
+    "|6   |          5.4|         3.9|          1.7|         0.4|setosa     |\n",
+    "|92  |          6.1|         3.0|          4.6|         1.4|versicolor |\n",
+    "|29  |          5.2|         3.4|          1.4|         0.2|setosa     |\n",
+    "|11  |          5.4|         3.7|          1.5|         0.2|setosa     |\n",
+    "\n",
     "\n",
     "### Add medias\n",
     "\n",
